--- a/celsius_conversion.html
+++ b/celsius_conversion.html
@@ -15,11 +15,12 @@
         <div class="image"><img src="images/app.png">
         </div>
         <div class="description">
-			<p>Please input a temperature in celsius.</p>
+			<p>Please input a temperature in celsius or farenheit.</p>
 
 			<p>Temperature: </p><input type="text" name="value1" id="value1"><br>
 
-			<button class="button" onclick="cToF()">Convert</button>
+			<button class="button" onclick="cToF()">Convert c To F</button>
+			<button class="button" onclick="fToC()">Convert f To C</button>
 
 			<p id="resultsentence"></p>
         </div>
